Fix Pitest runs on JDK 17